# rptable

./: Cargo.toml  Makefile  README.md
.github/workflows/: flatpak.yml  rust.yml
data/: com.pjtsearch.periodic_table-development.json  com.pjtsearch.periodic_table.appdata.xml  com.pjtsearch.periodic_table.control  com.pjtsearch.periodic_table.desktop  com.pjtsearch.periodic_table.json  com.pjtsearch.rptable-development.json  com.pjtsearch.rptable.appdata.xml  com.pjtsearch.rptable.control  com.pjtsearch.rptable.desktop  com.pjtsearch.rptable.json
src/: main.glade  main.rs
src/assets/: elements.toml
src/components/: mod.rs
src/components/periodic_table/: element.css  element.rs  mod.rs
src/components/table/: grid.rs  mod.rs
src/components/typography/: field.rs  h1.rs  h2.css  h2.rs  h3.rs  h4.rs  h5.rs  h6.rs  mod.rs  primary.rs  secondary.rs
src/utils/: add_class.rs  mod.rs  use_css.rs
src/views/: mod.rs
src/views/detail/: header.rs  mod.rs
src/views/detail/tabs/: electronic.rs  general.rs  mod.rs  thermal.rs
src/views/main/: header.rs  mod.rs
