[package]
name = "periodic_table"
version = "0.1.0"
authors = ["Peter PJT <pjtsignups@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "^0.9.0"
relm = "^0.20.0"
relm-derive = "^0.20.0"
toml = "0.5.6"
serde = "1.0.114"
serde_derive = "1.0.114"