[package]
name = "periodic_table"
version = "1.0.0"
authors = ["Peter PJT <pjtsignups@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "^0.9.0"
gdk = "^0.13.0"
glib = "^0.10.1"
relm = "^0.20.0"
gtk-test = "^0.6.1"
relm-derive = "^0.20.0"
toml = "0.5.6"
serde = "1.0.114"
serde_derive = "1.0.114"